--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
